--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Infinite Image Scroller</h1>
+<h1>Unsplash API -Infinite Scroll</h1>
+<!-- Loader -->
+<div class="loader" id="loader">
+ <img src="loader_square.svg" alt="Loading" >
+</div>
 <!-- <i class="fab fa-500px"></i> -->
  <!-- Script -->
  <script src="script.js"></script>
