--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
 <h1>Unsplash API -Infinite Scroll</h1>
 <!-- Loader -->
-<div class="loader" id="loader">
+<div class="loader" id="loader" style="display:none">
  <img src="loader_square.svg" alt="Loading" >
+</div>
+
+<!-- Image Container -->
+<div class="image-container" id="image-container">
+  <img src="https://images.unsplash.com/photo-1600052434976-f98531a56f2b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=60" alt="Image of Nature">
+  <img src="https://images.unsplash.com/photo-1600052434976-f98531a56f2b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=60" alt="Image of Nature">
 </div>
 <!-- <i class="fab fa-500px"></i> -->
  <!-- Script -->
