--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <h1>Unsplash API -Infinite Scroll</h1>
 <!-- Loader -->
-<div class="loader" id="loader" style="display:none">
- <img src="loader_square.svg" alt="Loading" >
+<div class="loader" id="loader" >
+ <img src="loader_circle.svg" alt="Loading" >
 </div>
 
 <!-- Image Container -->
